crates/uselesskey/tests/snapshots/snapshots_facade__ecdsa_p256_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: shape
---
key_type: EC
algorithm: ES256
pem_header: "-----BEGIN PRIVATE KEY-----"
private_der_len: "[DER_LEN]"
public_der_len: "[DER_LEN]"
has_kid: true
deterministic: true
