crates/uselesskey/tests/snapshots/snapshots_facade__ed25519_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: shape
---
key_type: OKP
algorithm: EdDSA
pem_header: "-----BEGIN PRIVATE KEY-----"
private_der_len: "[DER_LEN]"
public_der_len: "[DER_LEN]"
has_kid: true
deterministic: true
