crates/uselesskey/tests/snapshots/snapshots_facade__facade_corrupt_pem_variants.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: results
---
- variant: BadHeader
  differs_from_original: true
  first_line: "-----BEGIN CORRUPTED KEY-----"
- variant: BadFooter
  differs_from_original: true
  first_line: "-----BEGIN PRIVATE KEY-----"
- variant: BadBase64
  differs_from_original: true
  first_line: "-----BEGIN PRIVATE KEY-----"
- variant: ExtraBlankLine
  differs_from_original: true
  first_line: "-----BEGIN PRIVATE KEY-----"
