crates/uselesskey/tests/snapshots/snapshots_facade__facade_ecdsa_jwk_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
kty: EC
alg: ES256
crv: P-256
use_field: sig
has_kid: true
