crates/uselesskey/tests/snapshots/snapshots_facade__facade_ecdsa_p256_metadata.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
label: facade-ecdsa-p256
algorithm: ES256
private_pem:
  first_line: "-----BEGIN PRIVATE KEY-----"
  last_line: "-----END PRIVATE KEY-----"
  line_count: 5
public_pem:
  first_line: "-----BEGIN PUBLIC KEY-----"
  last_line: "-----END PUBLIC KEY-----"
  line_count: 4
private_der_len: 138
public_der_len: 91
