crates/uselesskey/tests/snapshots/snapshots_facade__facade_ed25519_jwk_shape.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
kty: OKP
alg: EdDSA
crv: Ed25519
use_field: sig
has_kid: true
