crates/uselesskey/tests/snapshots/snapshots_facade__facade_jwks_builder.snap
---
source: crates/uselesskey/tests/snapshots_facade.rs
expression: result
---
key_count: 2
kids_sorted: true
key_types:
  - RSA
  - EC
